# Task30_1

./: CMakeLists.txt
Task30_1/: CMakeLists.txt  Task30_1.cpp  Task30_1.h
